syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.chat";
option java_outer_classname = "HelloStreamingProto";
option objc_class_prefix = "HLWS";

package chat;

// The request message containing the user's name.
message UserMessage {
  string Body = 1;
}

service StreamingGreeter {
  rpc SayHello (stream UserMessage) returns (stream UserMessage) {}
}